<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background">

    <TextView
        android:id="@+id/text_view_inventory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/yugioh_font"
        android:text="@string/title_inventory"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_inventory_spin"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yugioh_font"
        android:text="@string/button_daily_spin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_inventory_title" />

    <TextView
        android:id="@+id/text_view_inventory_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yugioh_font"
        android:text="  "
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inventory_spin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectable_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:paddingBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_inventory_timer" />

    <ImageButton
        android:id="@+id/btn_inventory_map"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="24dp"
        android:background="@drawable/btn_rounded_big"
        android:elevation="40dp"
        android:src="@drawable/ic_map_nav"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_inventory_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="70dp"
        android:text="0P"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_inventory_spin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_inventory_spin"
        app:layout_constraintTop_toTopOf="@+id/btn_inventory_spin" />

</androidx.constraintlayout.widget.ConstraintLayout>