...
        android:src="@drawable/ic_location_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/btn_map_inventory"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="24dp"
        android:background="@drawable/inventory_nav_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
